# filen-relay

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  rust-toolchain.toml  tailwind.css
.github/workflows/: build-deployer.yaml  build-docker.yaml
filen-relay/: .gitignore  Dockerfile  tailwind.css
filen-relay-deployer/: Cargo.toml
filen-relay-deployer/src/: main.rs  scaleway_api.rs
filen-relay/src/: common.rs  main.rs
filen-relay/src/backend/: db.rs  server_manager.rs
filen-relay/src/frontend/: servers.rs
src/: api.rs  common.rs  db.rs  frontend.rs  main.rs  servers.rs  util.rs
src/backend/: auth.rs  db.rs  mod.rs  server_manager.rs
src/frontend/: manage_allowed_users_page.rs  mod.rs
