[package]
name = "filen-relay"
version = "0.1.0"
authors = ["JupiterPi <hello@jupiterpi.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]
