[package]
name = "filen-relay"
version = "0.1.0"
authors = ["JupiterPi <hello@jupiterpi.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
filen-sdk-rs = { git = "https://github.com/FilenCloudDienste/filen-rs", optional = true }
filen-types = { git = "https://github.com/FilenCloudDienste/filen-rs", optional = true }
uuid = "1.20.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros"], optional = true }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server", "rusqlite", "filen-sdk-rs", "filen-types", "tokio"]
