[package]
name = "filen-relay"
version = "0.1.0"
authors = ["JupiterPi <hello@jupiterpi.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
filen-sdk-rs = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "da5612f70d77245f63c0c5be8a11b5fcc09e193c", optional = true }
filen-rclone-wrapper = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "da5612f70d77245f63c0c5be8a11b5fcc09e193c", optional = true }
filen-types = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "da5612f70d77245f63c0c5be8a11b5fcc09e193c", optional = true }
uuid = { version = "1.20.0", features = ["v4", "js"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros"], optional = true }
port_check = "0.3.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive", "env"] }
axum-reverse-proxy = { version = "1.1.1", features = [
    "native-tls",
], optional = true }
wasm-cookies = "=0.2.1"

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "rusqlite",
    "filen-sdk-rs",
    "filen-rclone-wrapper",
    "filen-types",
    "tokio",
    "axum-reverse-proxy",
]
